# AgentPyT

./: .gitignore  fix_urls.py  rename.py
source-reference/: .env.example  .mcp.json.example  CLAUDE.md  README.md  dev.mjs  install.bat  install.sh  package.json  pyagentt  pyagentt-mcp  pyagentt-mcp.bat  pyagentt-web  pyagentt-web.bat  pyagentt.bat  pyproject.toml
source-reference/dexscreener_cli/: cli.py  mcp_server.py  state.py  web_api.py  web_config.py  web_runtime.py
source-reference/docs/: DAEMON_DEPLOYMENT.md  DESK_ALPHA_OPINIONS.md  IMPLEMENTATION_PLAN.md  NEXT_TASKS.md  PRD.md  SHIP_PRIORITY_STATUS.md  SYSTEM_ARCHITECTURE.md  UI_UX_SPEC.md  WEB_LOCAL_GUIDE.md
source-reference/pyagentt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
source-reference/pyagentt_cli/: __init__.py  alerts.py  cli.py  config.py  mcp_server.py  state.py  ui.py  web_api.py
source-reference/tests/: test_cli_json.py  test_mcp_server.py  test_models.py  test_scanner.py  test_scoring.py  test_security.py  test_state.py  test_web_api.py
source-reference/web/: index.html
source-reference/web/assets/: app.jsx  terminal.css
