[project]
name = "pyagentt"
version = "0.1.0"
description = "PyAgentT - PyAgentT-powered scanner with CLI, MCP, and local React web dashboard"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "vibeforge1111" }]
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.27.2",
  "mcp>=1.23.0",
  "pydantic>=2.11.0",
  "python-dotenv>=1.0.0",
  "rich>=13.9.4",
  "typer>=0.12.5",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.8.0",
  "pytest>=8.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8",
]

[project.scripts]
ds = "pyagentt_cli.cli:app"
pyagentt-mcp = "pyagentt_cli.mcp_server:main"
pyagentt-web = "pyagentt_cli.web_api:main"
pyagentt = "pyagentt_cli.cli:app"
pyagentt-mcp = "pyagentt_cli.mcp_server:main"
pyagentt-web = "pyagentt_cli.web_api:main"

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "S",   # flake8-bandit (security)
  "T20", # flake8-print
]
ignore = [
  "S603",  # subprocess call - we validate paths via shutil.which
  "S607",  # start process with partial path - same reason
  "S104",  # hardcoded bind-all - false positive on SSRF blocklist set
  "S107",  # hardcoded password - false positive on field name defaults
  "S110",  # try-except-pass - acceptable for clipboard fallback
  "S112",  # try-except-continue - acceptable for clipboard fallback
  "S311",  # pseudo-random - fine for jitter/backoff, not crypto
  "T201",  # print() - CLI tool uses print legitimately
  "E402",  # import not at top - cli.py needs load_dotenv() before imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.setuptools.packages.find]
include = ["pyagentt_cli*"]
